--- a/html/global-attr.html
+++ b/html/global-attr.html
@@ -5,46 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global-Attributes</title>
-    <link rel="shortcut icon" href="/img/logo/Intagram Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/Gmail Logo.png" type="image/x-icon">
 </head>
 
 <body>
 
-
     <details>
         <summary>details</summary>
         <h1 title="about title">heading</h1>
-        <h1 style="color: red; background-color: dodgerblue;">heading</h1>
+        <h1 style="color: red; background-color: gray; color: aqua;">heading</h1>
         <h1 class="testclass" id="testid">heading</h1>
     </details>
 
-
 </body>
 <style>
-    body {
-        background-color: black;
-        color: snow;
-    }
-
     #testid {
-        color: aqua;
-        background-color: gray;
+        color: red;
+        color: green;
+        color: magenta;
     }
 
     .testclass {
-        color: yellow;
-        color: blue;
-    }
-
-
-
-    h1 {
         color: green;
     }
 
-    .testclass {
-        color: magenta;
-        background-color: rgb(50, 92, 50);
+    #testid {
+        color: blue;
+    }
+
+    h1 {
+        color: gold;
+        background-color: black;
     }
 </style>
 
