--- a/html/exercise/ex5.html
+++ b/html/exercise/ex5.html
@@ -4,25 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 5</title>
-    <style>
-    body{
-        background-color: #000;
-        color: snow;
-    }        
-
-    details{
-        background: url(/img/3.jpg) center / cover no-repeat;
-        background-blend-mode: darken;
-        background-color: #00000078;
-    }
-
-    button{
-        background-color: #000;
-    }
-
-
-
-    </style>
 </head>
 <body>
     
@@ -33,12 +14,14 @@
         <button><img src="/img/3.jpg" alt="" width="200px" height="200px"></button>
         <button><img src="/img/3.jpg" alt="" width="200px" height="200px"></button>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque iste vero reprehenderit laboriosam nobis facere libero a excepturi eveniet sunt neque, rerum saepe voluptas deserunt sed temporibus aspernatur corrupti recusandae?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque iste vero reprehenderit
+             laboriosam nobis facere libero a excepturi eveniet sunt neque, rerum saepe voluptas deserunt sed temporibus aspernatur corrupti recusandae?
         </p>
-        <br>
+        <br> </details>
         <p style="background-color: #000; color: aqua;">
             <br>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque iste vero reprehenderit laboriosam nobis facere libero a excepturi eveniet sunt neque, rerum saepe voluptas deserunt sed temporibus aspernatur corrupti recusandae?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque iste vero reprehenderit 
+            laboriosam nobis facere libero a excepturi eveniet sunt neque, rerum saepe voluptas deserunt sed temporibus aspernatur corrupti recusandae?
             <br>
             <br>
         </p>
@@ -50,4 +33,23 @@
 
 
 </body>
+<style>
+    body{
+        background-color: #000;
+        color: snow;
+    }        
+
+    details{
+        background: url(/img/3.jpg) center / cover no-repeat fixed;
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    button{
+        background-color: #000;
+    }
+
+
+
+    </style>
 </html>
