--- a/html/exercise/ex7.html
+++ b/html/exercise/ex7.html
@@ -19,7 +19,8 @@
 
 
     <pre style="background-color: #000; color: rgb(17, 156, 156);">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
+        Lorem ipsum dolor sit amet, consec
+        tetur adipisicing elit. Nulla
         magnam temporibus deleniti commodi alias tenetur cumque ab quaerat,
 
     <button style="background-color: green;">
