--- a/copy-folder/html/exercise/ex2-copy.html
+++ b/copy-folder/html/exercise/ex2-copy.html
@@ -9,6 +9,52 @@
 
 <body>
 
+    <h1>
+        <mark><sup>E</sup>xampl<sub>e</sub></mark>
+    </h1>
+
+
+    <pre>
+                                    <mark> Lorem ipsum dolor sit amet,</mark>
+                                             consectetur adipisicing elit. 
+                                                     <del>  Magnam deserunt, delectus sint</del>
+                                                            totam non voluptatem explicabo obcaecati 
+                                                                  architecto distinctio provident, cum, modi 
+                                                                             nesciunt. Excepturi, eius.
+
+
+
+
+        <ins>Lorem ipsum dolor <mark>sit amet,</mark><del> consectetur adipisicing.</del></ins>
+
+        <button><b><mark><ins><small>Go</small></ins></mark></b></button> <button><h5><ins>Start</ins></h5></button> <button><h3><ins>Coding</ins></h3></button>                                                                    <button><b><mark><ins><small>Go</small></ins></mark></b></button> <button><h5><ins>Start</ins></h5></button> <button><h3><ins>Coding</ins></h3></button>
+        <button><b><mark><ins><small>Go</small></ins></mark></b></button> <button><h5><ins>Start</ins></h5></button> <button><h3><ins>Coding</ins></h3></button>                                                                    <button><b><mark><ins><small>Go</small></ins></mark></b></button> <button><h5><ins>Start</ins></h5></button> <button><h3><ins>Coding</ins></h3></button>
+
+
+                                                                          <mark> Lorem ipsum dolor sit amet,</mark>
+                                                                      consectetur adipisicing elit. 
+                                                                  <del>  Magnam deserunt, delectus sint</del>
+                                                           totam non voluptatem explicabo obcaecati 
+                                                      architecto distinctio provident, cum, modi 
+                                         nesciunt. Excepturi, eius.
+
+
+
+
+    </pre>
+
+
+    <h1>
+        <ins>
+            <mark>
+                <sup>E</sup>
+                <sub>x</sub>
+                er
+                <sub>cise</sub>
+            </mark>
+        </ins>
+    </h1>
+
 </body>
 
 </html>
