--- a/html/global-attr.html
+++ b/html/global-attr.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html title="About Tite-test-attr" lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global-Attributes</title>
-    <link rel="shortcut icon" href="/img/logo/Intagram Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/Gmail Logo.png" type="image/x-icon">
 </head>
 
 <body>
 
 
+    <a href="index1.html">index1.html</a>
+    <br>
+    <a href="img-link.html">img-link.html</a>
+    <br>
+    <a href="global-attr.html">global-attr.html</a>
+    <br>
+    <a href="table.html">table.html</a>
+    <br>
+    <a href="list.html">list.html</a>
+
     <details>
-        <summary>details</summary>
         <h1 title="about title">heading</h1>
-        <h1 style="color: red; background-color: dodgerblue;">heading</h1>
+        <h1 style="color: green; background-color: gray;">heading</h1>
         <h1 class="testclass" id="testid">heading</h1>
     </details>
 
-
 </body>
 <style>
-    body {
-        background-color: black;
-        color: snow;
-    }
-
     #testid {
-        color: aqua;
-        background-color: gray;
+        color: gold;
+        color: red;
+        background-color: #333;
+    }
+    
+    .testclass {
+        color: red;
+        background-color: black;
+    }
+    
+    #testid {
+        color: gold;
+        color: red;
+        background-color: #333;
+        color: green;
     }
 
-    .testclass {
-        color: yellow;
+    h1{
         color: blue;
     }
 
 
-
-    h1 {
-        color: green;
-    }
-
-    .testclass {
-        color: magenta;
-        background-color: rgb(50, 92, 50);
-    }
 </style>
 
 </html>
