--- a/html/img-link.html
+++ b/html/img-link.html
@@ -10,21 +10,31 @@
 <body>
 
 
-    <img src="/img/4.jpg" alt="not found" width="200px" height="200px">
-    <!-- <div style="width: 200px; height: 200px;">
-        <img src="/img/4.jpg" alt="" width="100%" height="100%">
-    </div> -->
+    <a href="index1.html">index1.html</a>
     <br>
+    <a href="img-link.html">img-link.html</a>
     <br>
-    <a href="https://www.youtube.com" target="_self">ссылка на youtube target self по умолчанию</a>
+    <a href="global-attr.html">global-attr.html</a>
     <br>
+    <a href="table.html">table.html</a>
     <br>
-    <a href="https://www.apple.com/" target="_blank">ссылка на apple target blank</a>
+    <a href="list.html">list.html</a>
+
+    <!-- <img src="/img/3.jpg" alt="not-found" width="200px" height="200px"> -->
+
+
+    <!-- <div class="block" style="width: 100px; height: 100px;"> -->
+    <!-- <img src="/img/3.jpg" alt="not found" width="100%" height="100%"> -->
+    <!-- </div> -->
+
+    
+    <img src="/img/3.jpg" alt="not found" width="200px" height="200px">
     <br>
+    <a href="https://www.apple.com/">Apple com</a>
     <br>
-    <a href="mailto:john@gmail.com" target="_blank">Email for John</a>
+    <a href="mailto:test@gmail.com">mailto:test@gmail.com</a>
+
 
 </body>
-
 
 </html>
