--- a/html/index1.html
+++ b/html/index1.html
@@ -8,8 +8,17 @@
 </head>
 
 <body>
+    <a href="index1.html">index1.html</a>
+    <br>
+    <a href="img-link.html">img-link.html</a>
+    <br>
+    <a href="global-attr.html">global-attr.html</a>
+    <br>
+    <a href="table.html">table.html</a>
+    <br>
+    <a href="list.html">list.html</a>
 
-    <!-- comment -->
+
 
     <h1>заголовок</h1>
     <h2>заголовок</h2>
