--- a/copy-folder/html/exercise/ex-table1.copy.html
+++ b/copy-folder/html/exercise/ex-table1.copy.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ex-Table4</title>
+    <title>Ex table 1 copy</title>
 </head>
-<body style="background-color: black; color:  snow ">
+<body style="background-color: black; color: snow">
 
-    <table border="5px" bordercolor="green">
+
+    <table border="5" bordercolor="green">
         <tr>
             <th colspan="4">
-                Lorem ipsum dolor sit amet.
+                Lorem  ipsum dolor sit amet.
             </th>
         </tr>
         <tr>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
-            <th><img src="/img/4.jpg" alt="" width="100px" height="100px"></th>
+            <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
         </tr>
-        <tr>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
-            <th><img src="/img/4.jpg" alt="" width="100px" height="100px"></th>
+            <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
         </tr>
-        <tr>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
             <th>Lorem, ipsum dolor.</th>
-            <th><img src="/img/4.jpg" alt="" width="100px" height="100px"></th>
+            <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
         </tr>
+
     </table>
     
 </body>
