--- a/copy-folder/html/exercise/table-ex1-copy.html
+++ b/copy-folder/html/exercise/table-ex1-copy.html
@@ -8,37 +8,35 @@
 </head>
 
 <body style="background-color: black; color: snow;">
+   
 
-    <table border="5px" bordercolor="green">
+    <table border="5px" border-color="green"> 
         <tr>
-            <th colspan="4">
+            <th colspan=4></th>
                 Lorem ipsum dolor sit amet.
             </th>
-        </tr>
+         </tr>  
+         <tr>
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
+        </tr>  
         <tr>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th><img src="/img/2.jpg" alt="" width="150px" height="150px"></th>
-        </tr>
- 
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
+        </tr>  
         <tr>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th><img src="/img/2.jpg" alt="" width="150px" height="150px"></th>
-        </tr>
- 
-        <tr>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th>Lorem, ipsum amet.</th>
-            <th><img src="/img/2.jpg" alt="" width="150px" height="150px"></th>
-        </tr>
- 
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th>Lorem ipsum dolor.</th>
+              <th><img src="/img/4.jpg" alt=""width="100px" height="100px"></th>
+        </tr>  
     </table>
 
 </body>
-
-
 </html>
+
+   
