--- a/html/list.html
+++ b/html/list.html
@@ -10,7 +10,7 @@
 <body>
 
    <!-- I, i, a, A, 1 -->
-    <!-- <a href="index1.html">index1.html</a>
+    <a href="index1.html">index1.html</a>
     <br>
     <a href="img-link.html">img-link.html</a>
     <br>
@@ -20,14 +20,20 @@
     <br>
     <a href="list.html">list.html</a>
     <br>
-    <a id="back" href="#testbookmark">For New Message</a>
+    <a id="back" href="#testbookmark">For New Message</a> 
 
 
-    <ol type="I">
+
+
+    <ol type="1">
         <li>text</li>
         <li>text</li>
         <li>text</li>
         <li>text</li>
+        <ul>
+            <li>text</li>
+            <li>text</li>
+        </ul> 
     </ol>
 
 
@@ -43,10 +49,10 @@
                 <ul>
                     <li>text</li>
                     <li>text</li>
-                </ul>
-            </ul>
-        </ul>
-    </ul>    
+                </ul> 
+            </ul> 
+        </ul> 
+    </ul> 
 
 
     <li>text</li>
@@ -100,12 +106,13 @@
     <br>
 
 
-    <a href="#back">
-        <p id="testbookmark">New Message2</p>
-    </a>  -->
+    <a href="#back" id="testbookmark">Back</a>  
 
 
-    <!-- <marquee behavior="alternate" direction="left" truespeed scrolldelay="20">
+    <!-- <marquee behavior="alternate" direction="right" truespeed scrolldelay="10">
+        Lorem ipsum dolor sit amet.
+    </marquee>   -->
+    <!-- <marquee height="200px" behavior="alternate" direction="up" scrollamount="60">
         Lorem ipsum dolor sit amet.
     </marquee>   -->
 
