--- a/html/table.html
+++ b/html/table.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <!-- <a href="index1.html">index1.html</a>
+    <a href="index1.html">index1.html</a>
     <br>
     <a href="img-link.html">img-link.html</a>
     <br>
@@ -17,7 +17,7 @@
     <br>
     <a href="table.html">table.html</a>
     <br>
-    <a href="list.html">list.html</a> -->
+    <a href="list.html">list.html</a>
 
     <table border="1px" bordercolor="red">
         <tr>
