--- a/html/exercise/ex-list-copy1.html
+++ b/html/exercise/ex-list-copy1.html
@@ -6,7 +6,7 @@
     <title>Ex-list 1</title>
 </head>
 <body>
-
+    
     <h1>My Resume</h1>
 
     <h2>My name is HUNTER and I work as a Frontend teacher in IT PARK</h2>
@@ -15,45 +15,46 @@
 
     <h4>My skills</h4>
 
-    <li>oding Frontend and Backend</li>
+    <ol>
+        <li>Coding Frontend and Backend</li>
         <li>Html Сss Javascipt Sass Bootstrap React</li> 
-        <li>Spaek in 5 languages</li> 
-            <li>Teaching</li>Teaching
-          <li>Market Managment</li> 
-            </li>
+        <li> Spaek in 5 languages</li>  
+        <li>Teaching</li>
+        <li>Market Managment</li>
     </ol>
     <br>
     <hr>
 
-    <h4>My hobbis</h4>
+
+    <h4>My hobbies</h4>
 
     <ol>
         <li>Music</li>
-        <li>Traning</li>
+        <li>Training</li>
         <li>Vidio games</li>
+        <ul>
+            <li>Mobile legends <sup style="color: red; background-color:  black;">(Moba)</sup></li>
+            <li>World of Warcraft</li>
+            <li>Chess </li>
     </ol>
-         <li>Mobile legends <sup style="color: red; background-color: black; (Moba)"></sup></li>
-         <li>World of Warcraft</li>
-         <li>Chess </li>
-        </ol>
-    
+
+
 </body>
 
 <style>
-    body{
-        background-color:#555;
+    body {
+        background-color: #555;
         color:#fff;
-
     }
 
     ol{
-        color:red;
-        background-color:green;
+        color:green;
+        background-color:#000;
     }
 
     ul{
-        color:green;
-        background-color:lightblue;
+        color:red;
+        background-color:lightblue
     }
 </style>
 </html>
