added css exercise 21-22

--- a/css/1 first lesson/index.html
+++ b/css/1 first lesson/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-<<<<<<< HEAD
 
     <h1 title="title about">heading</h1>
     <h1 style="color: blue;">heading</h1>
@@ -22,54 +21,43 @@
     h1 {
         color: red;
     }
-=======
-    <div>
-        <h1>First Css Lesson</h1>
-        <main>
-            <h1>Lorem, ipsum.</h1>
-            <aside>
-                <h1>Lorem, ipsum.</h1>
-            </aside>
-        </main>
-    </div>
-    <h1>First Css Lesson</h1>
 
-    <!-- <h1 style="color: snow;">First Css Lesson</h1> -->
+    /* body{
+    background-color: #000;
+    color: red;
+} */
+    * {
+        background-color: #000;
+        color: red;
+    }
 
-
-    <!-- <main>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <div>
-            <p class="testclass">Lorem ipsum dolor sit amet.</p>
-            <aside>
-                <p id="testid">Lorem ipsum dolor sit amet.</p>
-            </aside>
-        </div>
-    </main> -->
-    
-<!--   
-    <h1>First Css Lesson</h1>
-    <h1>First Css Lesson</h1>
-    <h1>First Css Lesson</h1> -->
+    /* 
+div h1{
+    color: red;
+} */
 
 
-    <!-- <nav></nav> -->
-    <!-- <main></main> -->
-    <!-- <section></section> -->
-    <!-- <aside></aside> -->
-    <!-- <header></header> -->
-    <!-- <footer></footer> -->
+    /* main > p {
+    color: blue;
+} */
 
-    <button>button</button>
-    <button>button</button>
-    <button>button</button>
-</body>
-<style>
-    /* button {
-        background-color: green;
-        color: snow;
-    } */
->>>>>>> e6bb4d1fa04612e94ed346bc9ca8fccf382ea55d
+
+    main~h1 {
+        color: green;
+    }
+
+    main+h1 {
+        color: gold;
+    }
+
+    /* .testclass {
+    color: magenta;
+} */
+
+
+    /* #testid {
+    color: greenyellow;
+} */
 </style>
 
 </html>
