--- a/css/2 text-docortion/index.html
+++ b/css/2 text-docortion/index.html
@@ -5,56 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Decoration</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-
 
 <body>
 
     <p class="p1">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Lorem, ipsum dolor sit amet
     </p>
-    <br>
-    <br>
-    <a href="#">Lorem ipsum dolor sit amet.</a>
+    <a href="#">
+        Lorem ipsum dolor sit amet.
+    </a>
 
 </body>
 <style>
-
     body {
-        /* background-image: url(../../img/2.jpg); */
+        /* width: 100%; */
+        /* height: 100vh; */
+        /* background-image: url(../../img/3.jpg); */
         /* background-size: 200px 200px; */
-        /* background-repeat: no-repeat; */
         /* background-size: cover; */
-        /* background-position: center; */
-        /* background: url(../../img/3.jpg) center / cover no-repeat; */
+        /* background-repeat: no-repeat; */
+        /* background-position: center ; */
         /* background-attachment: fixed; */
-        /* background-blend-mode: darken; */
-        /* background-color: rgba(0, 0, 0, 0.5); */
-        /* color: snow; */
-        /* text-align: center; */
+        background: url(../../img/3.jpg) center / cover no-repeat fixed;
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.447);
+        color: snow;
+        text-align: center;
     }
 
-    .p1 {
+    p {
+        /* text-decoration-line:  line-through ; */
         /* text-decoration-line:  underline; */
         /* text-decoration-line:  overline; */
-        /* text-decoration-line:  line-through ; */
         /* text-decoration-line:  underline overline  line-through; */
         /* text-decoration-style: solid ; */
         /* text-decoration-style: dotted ; */
         /* text-decoration-style: dashed ; */
         /* text-decoration-style: double ; */
         /* text-decoration-style: wavy ; */
-        /* text-decoration-thickness:  2px; */
-        /* text-decoration-thickness:  10%; */
+        /* text-decoration-thickness:  3.2px; */
+        /* text-decoration-thickness:  20%; */
         /* text-decoration-color: green; */
-        /* text-decoration: underline solid 3px red; */
-        /* text-transform: uppercase; */
+        text-decoration: underline solid 3px red;
+        text-transform: uppercase;
         /* text-transform: lowercase; */
         /* text-transform: capitalize; */
-        /* word-spacing: 20px; */
-        /* letter-spacing: 20px; */
-        /* line-height: 50px; */
+        word-spacing: 20px;
+        letter-spacing: 20px;
+        line-height: 50px;
     }
 
 
