--- a/html/exercise/ex-list-copy2.html
+++ b/html/exercise/ex-list-copy2.html
@@ -6,85 +6,30 @@
     <title>Ex-list 2</title>
 </head>
 <body>
-    
+  
+<ol type="A">
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+</ol>
+<ol type="a">
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+</ol>
+<ol type="I">
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+</ol>
+<ol type="i">
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+</ol>
 
-    <h1>Best cars Worldwide</h1>
-    <ol>
-        <table>
-            <td style="background-color: black; color: red;">
-                <li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-            <td style="background-color: black; color: red;">
-                <li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-            <td style="background-color: black; color: red;">
-                <li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-            <td style="background-color: black; color: red;">
-                <li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-                    <h3>Lamborgini</h3>
-                    <ul>
-                        <li>Extreme expensive</li>
-                        <li>Extreme comfort</li>
-                        <li>Relyable for long usage</li>
-                        <li>Found Worldwide</li>
-                    </ul>
-                </li>
-            </tr>
-        </table>
-    </ol>
-</body>
-</html>
+ 
