--- a/html/exercise/ex-list-copy4.html
+++ b/html/exercise/ex-list-copy4.html
@@ -103,7 +103,9 @@
             </td>
             <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nobis, ea quia repellendus quos quod itaque asperiores voluptatum odit maxime dignissimos, distinctio ducimus dolor ad dolores doloremque vel pariatur quaerat.	
-            </td>
+                //         data.forEach(({img, altimg, title, descr, price}) => {
+                    //             new MenuCard(img, altimg, title, descr, price, ".menu .container").render();
+                    //         }); </td>
           </tr>
       </table>
 
