--- a/html/form.html
+++ b/html/form.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
-<!-- 
-    <fieldset style="text-align: center;">
-        <legend>form registration</legend>
-        <form action="index1.html" method="post" enctype="multipart/form-data">
-            <input type="text" maxlength="10"  minlength="3" placeholder="username" value="Dilshod"> <br>
+    
+
+    <!-- <fieldset style="text-align: center;">
+        <legend>Form Registration</legend>
+        <form action="#" method="post" enctype="multipart/form-data">
+            <input type="text" maxlength="10"  minlength="3" placeholder="username" value="Marjona"> <br>
             <input type="password" placeholder="password" required> <br>
             <input type="submit"> <br>
             <input type="reset"> <br>
@@ -32,9 +33,9 @@
             <input type="time"> <br>
         </form> 
     </fieldset> -->
-
-    
-    <!-- <label>
+    <!-- <textarea name="" id=""></textarea> -->
+    <!-- <br>
+    <label>
         username
         <input tabindex="1" placeholder="username" type="text" name="" id="" >
     </label>
@@ -48,9 +49,9 @@
         <input type="url" id="website" name="website" placeholder="https://example.com" required>
         <br><br>
         <input type="submit" value="Отправить">
-    </form> -->
+    </form>
 
-    <!-- <form action="index1.html" method="">  
+    <form action="index1.html" method="">  
         <label for="website">Сайт:</label>  
         <input type="search" id="website" name="website" placeholder="https://example.com" required>  
         <br><br>  
@@ -66,7 +67,7 @@
     <section>Section</section>
     <br>
     <br>
-
+    <br>
     <span>span</span>
     <span>span</span>
     <span>span</span>
@@ -78,7 +79,7 @@
 
     <!-- <select name="" id="">
         <option>red</option>
-        <option>green</option>
+        <option selected>green</option>
         <option>blue</option>
     </select>
 
