--- a/css/1 first lesson/index.html
+++ b/css/1 first lesson/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Css Lesson</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/img/logo/Gmail Logo.png" type="image/x-icon">
 </head>
 
 <body>
 
-
+    
     <h1 title="title about">heading</h1>
     <h1 style="color: blue;">heading</h1>
-    <h1 class="testclass" id="testid">heading</h1>
+    <h1 class="testclass" id="testid">heading</h1>                               
 
 
 </body>
@@ -22,24 +23,26 @@
         color: red;
     }
 
-    /* body{
+    /* body {
     background-color: #000;
     color: red;
-} */
-    * {
+    } */
+
+
+    body{
         background-color: #000;
         color: red;
     }
 
     /* 
-div h1{
+    div h1{
     color: red;
-} */
+    } */
 
 
     /* main > p {
     color: blue;
-} */
+    } */
 
 
     main~h1 {
